# fastapi-auth-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed.py
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/api/v1/: auth.py  router.py
app/core/: context.py  database.py  decorators.py  exceptions.py  guards.py  http_client.py  logging.py  rate_limit.py  security.py
app/middleware/: correlation_id.py  response_wrapper.py  security_headers.py
app/models/: user.py
app/repositories/: base.py  user.py
app/schemas/: auth.py  common.py
app/scrapers/: base.py
app/services/: auth.py  base.py
migrations/: env.py
tests/: conftest.py  test_error_handling.py  test_health.py  test_security_headers.py
